<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MPV DJI</string>
    <string name="action_settings">Settings</string>   
    <string name="disconnected">Disconnected</string>
    <string name="remotecontrolerror">遥控连接错误</string>
    <string name="product_information">飞机信息</string>
    <string name="connection_loose">状态: 无机体连接</string>
    <string name="sdk_version">Powered by DJI SDK V3.3</string>
    <string name="connection">连 接</string>
    <string name="value0">0</string>

    <string name="language">语言</string>
    <string name="formatting_sd_card">格式化SD卡</string>
    <string name="unit">单位</string>
    <string name="clear_cache">清除缓存</string>
    <string name="gyro">gyro bar</string>
    <string name="cross">cross</string>
    <string name="status">状态: 注册...</string>
    <string name="pitch">pitch</string>
    <string name="states_list">状态列表</string>
    <string name="setting">设置</string>
    <string name="auto_check">状态自检</string>
    <string name="imu">IMU</string>
    <string name="compass">指南针</string>
    <string name="tx_wifi">无线信道质量</string>
    <string name="flight_mode">飞行模式</string>
    <string name="rc_mode">遥控器模式</string>
    <string name="battery_voltage">飞行器电量</string>
    <string name="sd_card_remaining_space">SD卡剩余容量</string>
    <string name="gimbal_status">云台状态</string>

    <string name="flight_controller">飞控</string>
    <string name="remote_controller">遥控器</string>
    <string name="hint">提示</string>
    <string name="compass_calibrate_hint">将进行指南针校验，请确保飞机远离电线、铁磁性物体等，防止电磁干扰</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="battery">电池</string>
    <string name="wifi_link">WiFi设置</string>

    <string name="home_set">返航点设置</string>
    <string name="allow_change_flight_mode">允许切换飞行模式</string>
    <string name="home_height">返航高度</string>
    <string name="home_height_toast">返航高度只能设置20到500之间</string>
    <string name="max_flight_height">最大升限</string>
    <string name="max_flight_height_toast">最大升限只能设置20到500之间</string>
    <string name="max_flight_radius">最大距离</string>
    <string name="max_flight_radius_toast">最大距离只能设置20到500之间</string>
    <string name="novice_mode">新手模式</string>
    <string name="fail_safe">failsafe模式</string>
    <string name="smart_go_home">自动返航开关</string>
    <string name="led_switch">led开关</string>
    <string name="vision_positioning">视觉定位开关</string>

    <string name="gimbal">云台</string>
    <string name="gimbal_pitch_range">云台俯仰限位</string>

    <string name="gimbal_tune">云台滚转轴微调</string>

    <string name="gimbal_wheel_speed">云台拨轮控制速度</string>

    <string name="camera">相机</string>

    <string name="camera_mode">相机模式</string>

    <string name="iso">ISO</string>
    <string name="shutter_speed">光圈快门</string>
    <string name="exposure_compensation">曝光补偿</string>

    <string name="video_format">视频格式</string>
    <string name="video_resolve">视频尺寸</string>
    <string name="video_standard">视频标准</string>

    <string name="photo_mode">拍照模式</string>
    <string name="photo_format">照片格式</string>
    <string name="photo_resolve">照片比例</string>
    <string name="white_balance">白平衡</string>
    <string name="camera_filter">滤镜</string>

    <string name="video">视频</string>
    <string name="photo">拍照</string>

    <string name="ratio43">4:3</string>
    <string name="ratio169">16:9</string>

    <string name="auto">自动</string>
    <string name="manual">手动</string>

    <string name="open">开</string>
    <string name="close">关</string>

    <string name="back">返回</string>

    <string name="show_path">显示航线</string>
    <string name="clear_path">清除航线</string>

    <string name="fpv">第一人称视角</string>
    <string name="tpv">第三人称视角</string>
    <string name="menu">菜单</string>

    <string name="map">地图</string>
    <string name="brightness">亮度</string>
    <string name="helmet">头盔</string>
    <string name="fc">飞控</string>

    <string name="head_follow">头部跟踪</string>
    <string name="course_follow">航向跟踪</string>

    <string name="single_photo">单拍</string>
    <string name="hdr">HDR</string>
    <string name="series_photo">连拍</string>
    <string name="aeb_series_photo">AEB连拍</string>
    <string name="internal_photo">间隔拍</string>

    <string name="jpeg">JPEG</string>
    <string name="raw">RAW</string>

    <string name="sunny">晴天</string>
    <string name="cloudy">阴天</string>

    <string name="volume">音量</string>
    <string name="fan">散热通风</string>

    <string name="force_open">强制打开</string>
    <string name="force_close">强制关闭</string>

    <string name="find_back">找回</string>

    <string name="style">风格</string>
    <string name="style_1">航空</string>
    <string name="style_2">深蓝</string>
    <string name="style_3">深绿</string>

    <string name="frame_rate">帧率</string>

    <string name="connect_controller">连接飞机遥控器</string>
    <string name="prepare_flight">准备飞行</string>

    <string name="connecting">正在连接</string>

    <string name="left_arrow">&lt;</string>
    <string name="right_arrow">&gt;</string>

    <string name="compass_calibration">指南针校准流程</string>
    <string name="fc_param_setting">飞控参数设置</string>
    <string name="compass_correct">指南针正常</string>
    <string name="compass_incorrect">指南针异常</string>
    <string name="rc_setting">遥控器设置</string>
    <string name="data_connect_setting">数据连接设置</string>
    <string name="battery_setting">电量报警</string>
    <string name="gimbal_setting">云台设置</string>
    <string name="camera_setting">相机设置</string>
    <string name="ui_setting">飞行头盔设置</string>
    <string name="common_setting">通用设置</string>

    <string name="flight_limit">飞行限制</string>
    <string name="failure_safety_behavior">失效安全行为</string>
    <string name="low_power_home">低电量自动返航</string>
    <string name="open_vision_positioning">启动视觉定位</string>

    <string name="wifi_name">WIFI名称</string>
    <string name="wifi_password">WIFI密码</string>

    <string name="current_power">当前电量</string>
    <string name="current_temperature">当前温度</string>
    <string name="flight_time">飞行时间</string>

    <string name="too_low_power_warning">严重低电量报警</string>
    <string name="low_power_warning">低电量报警</string>
    <string name="home_power_threshold">返回电量阈值</string>
    <string name="discharge_time">开始自动放电时间</string>
    <string name="battery_history_info">电池历史信息</string>

    <string name="battery_series_no">电池序列号</string>
    <string name="circus_number">循环次数</string>
    <string name="battery_life">电池寿命</string>
    <string name="battery_history_record">电池历史记录信息</string>

    <string name="helmet_setting">飞行头盔设置</string>
    <string name="ui_style">显示风格</string>
    <string name="find_back_function">找回功能</string>

    <string name="color">色彩</string>
    <string name="video2">录像</string>

    <string name="video_select">制式选择</string>
    <string name="compass_calibrate">指南针校准</string>
    <string name="start_calibrate">开始校准</string>
    <string name="cancel_calibrate">取消校准</string>

    <string name="start">开始</string>
    <string name="finish">完成</string>

    <string name="open_helmet_power">请打开头盔电源</string>
    <string name="searching_bluetooth">正在搜索蓝牙设备</string>
    <string name="confirm_granted_bluetooth">请确保授权应用使用蓝牙</string>

    <string name="manual_search">手动搜索</string>

    <string name="compass_calibrate_horizontal_hint">进入指南针校准模式\r\n请水平旋转飞行器360°</string>
    <string name="compass_calibrate_vertical_hint">进入指南针校准模式\r\n请竖直旋转飞行器360°</string>

    <string name="no_wifi_hint">该型号飞机没有wifi</string>

    <string name="day">天</string>

    <string name="pal">PAL</string>
    <string name="ntsc">NTSC</string>

    <string name="mov">MOV</string>
    <string name="mp4">MP4</string>

    <string name="resolution_4k">4K</string>
    <string name="resolution_1080p">1080P</string>
    <string name="resolution_720p">720P</string>

    <string name="frame_rate_24">24</string>
    <string name="frame_rate_30">30</string>
    <string name="frame_rate_60">60</string>

    <string name="refresh">刷新</string>
    <string name="home_location_updated">返航点更新成功</string>

    <string name="hover">悬停</string>
    <string name="landing">降落</string>
    <string name="go_home">返航</string>

    <string name="number_between_a_and_b">数值范围%1$s-%2$s</string>

    <string name="no_vision_position_hint">此机型不支持视觉定位</string>

    <!--<string name="rc_mode">摇杆模式</string>-->
    <string name="cn_mode">中国手</string>
    <string name="us_mode">美国手</string>
    <string name="jp_mode">日本手</string>

    <string name="gimbal_pitch_smooth">云台俯仰平滑</string>

    <string name="smart_go_home_energy">自动返航电量</string>
    <string name="smart_land_energy">自动降落电量</string>

    <string name="rc_battery_low_power_hint">遥控电量不足，请立即返航</string>
    <string name="up_link_signal_weak_hint">遥控信号弱</string>
    <string name="down_link_signal_weak_hint">图传信号弱，请调整天线</string>
    <string name="down_link_signal_none_hint">无图传</string>

    <string name="gimbal_motor_overloaded">云台电机过载</string>
    <string name="sd_card_full">SD卡存储不足</string>

    <string name="change_to_fpv_mode">进入第一人称视角</string>
    <string name="change_to_tpv_mode">进入第三人称视角</string>

    <string name="reach_limited_height">到达最大飞行高度</string>
    <string name="reach_limited_radius">到达最大飞行距离</string>

    <string name="fc_battery_low_power_hint">飞机电量不足，请立即返航</string>
    <string name="fc_battery_very_low_power_hint">飞机电量过低，即将自动返航</string>

    <string name="taking_off">飞机起飞，记录返航点</string>
    <string name="flying">飞行中</string>
    <string name="landed">飞机已降落</string>

    <string name="comma">，</string>

    <string name="mode">模式</string>

    <string name="connect_helmet">连接头盔</string>

    <string name="fly_zone">飞行区域</string>
    <string name="model_self_check">模块自检</string>
    <string name="wireless_signal">无线信道</string>
    <string name="aircraft_energy">飞行器电量</string>

    <string name="no_restriction_flight">可正常飞行</string>
    <string name="restrict_flight">限制飞行</string>
    <string name="forbid_flight">禁止飞行</string>

    <string name="normal">正常</string>
    <string name="abnormal">异常</string>

    <string name="unknown">未知</string>

    <string name="left_controller">左摇杆</string>
    <string name="right_controller">右摇杆</string>

    <string name="attitude_mode">姿态模式</string>
    <string name="sport_mode">运动模式</string>
    <string name="gps_mode">GPS模式</string>

</resources>
