<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/list_bluetooth_service"
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </ListView>

    <TextView
        android:id="@+id/text_product_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_information"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/text_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/text_product_info"
        android:layout_centerHorizontal="true"
 />



    <Button
        android:id="@+id/btn_setting"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_btn"
        android:text="@string/setting"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="140dp" />

    <Button
        android:id="@+id/btn_open"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_btn"
        android:text="@string/connection"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sdk_version"
        android:textSize="8sp"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>
