<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    style="@style/SettingRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:divider="@drawable/divider"
    android:orientation="vertical"
    skin:enable="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_back"
            style="@style/SettingBackBtn"
            android:src="@drawable/left_arrow"
            skin:enable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/rc_setting"
            android:textColor="@color/gray"
            skin:enable="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/gimbal_wheel_speed"
                android:textColor="@color/gray"
                skin:enable="true" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center_vertical">

                <TextView
                    android:id="@+id/tv_gimbal_wheel_speed"
                    style="@style/SettingValue"
                    android:background="@drawable/bg_setting_value"
                    android:text="100"
                    android:textColor="@color/lightGray2"
                    skin:enable="true" />
            </LinearLayout>
        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_gimbal_wheel_speed"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:maxHeight="6dp"
            android:progressDrawable="@drawable/bg_seekbar"
            android:thumb="@drawable/thumb_seekbar"
            android:thumbOffset="0dp"
            skin:enable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/rc_mode"
                android:textColor="@color/gray"
                skin:enable="true" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center_vertical">

                <TextView
                    android:id="@+id/tv_rc_mode"
                    style="@style/SettingValue"
                    android:background="@drawable/bg_setting_value"
                    android:text="@string/cn_mode"
                    android:textColor="@color/lightGray2"
                    skin:enable="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/iv_rc_mode_1"
                android:layout_width="115dp"
                android:layout_height="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/fl_mode_left"
                android:gravity="start|top"
                android:text="@string/left_controller"
                android:textColor="@color/blue"
                android:paddingStart="5dp"
                android:paddingTop="3dp"
                skin:enable="true" />

            <TextView
                android:id="@+id/iv_rc_mode_2"
                android:layout_width="115dp"
                android:layout_height="80dp"
                android:background="@drawable/fl_mode_right"
                android:gravity="start|top"
                android:text="@string/right_controller"
                android:textColor="@color/blue"
                android:paddingStart="5dp"
                android:paddingTop="3dp"
                skin:enable="true" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>